--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        </div><!--closes div 'header'-->
         <div id="plans">
             <ul class="personal">
-               <li>PERSONAL<br>$5<br>PER MONTH</li>
+               <li class="center">PERSONAL<br>$5<br>PER MONTH</li>
                 <li>Free setup</li>
                 <li>Custom sub-domain</li>
                 <li>Standard customer support</li>
@@ -26,7 +26,7 @@
                 <li>Choose</li>
             </ul>
             <ul class="small_business">
-                <li>SMALL BUSINESS<br>$25<br>PER MONTH</li>
+                <li class="center">SMALL BUSINESS<br>$25<br>PER MONTH</li>
                 <li>Free setup</li>
                 <li>Use your own domain</li>
                 <li>Standard customer support</li>
@@ -36,7 +36,7 @@
                 <li>Choose</li>
             </ul>
             <ul class="enterprise">
-                <li>ENTERPRISE<br>$45<br>PER MONTH</li>
+                <li class="center">ENTERPRISE<br>$45<br>PER MONTH</li>
                 <li>Free setup</li>
                 <li>Use your own domain</li>
                 <li>Premium customer support</li>
@@ -46,6 +46,7 @@
                 <li>Choose</li>
             </ul>
         </div><!--closes div 'plans'-->
+        <div class="clearfix"></div>
         <div id="summary">
             <div class="fl">
                 <h3>GET STARTED TODAY</h3>
