changed buttons and positions

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li class="grayed">1B file storage</li>
                 <li class="grayed">1 database</li>
                 <li class="grayed">Unlimited bandwith</li>
-                <li class="buttonStyle"><input type="button" name="plan" value="Button"></li>
+                <li class="buttonStyle"><button class="button">Choose</button></li>
             </ul>
             <ul class="small_business">
                 <li class="plan25">SMALL BUSINESS<br><span class="lgFont">$25</span><br><span class="grayMonth">PER MONTH</span></li>
@@ -34,7 +34,7 @@
                 <li class="grayed">10GB file storage</li>
                 <li class="grayed">5 databases</li>
                 <li class="grayed">Unlimited bandwidth</li>
-                <li class="buttonStyle"><input type="button" name="plan" value="Button"></li>
+                <li class="buttonStyle"><button class="button">Choose</button></li>
             </ul>
             <ul class="enterprise">
                 <li class="plan45">ENTERPRISE<br><span class="lgFont">$45</span><br><span>PER MONTH</span></li>
@@ -44,9 +44,10 @@
                 <li class="grayed">Unlimited file storage</li>
                 <li class="grayed">25 databases</li>
                 <li class="grayed">Unlimited bandwidth</li>
-                <li class="buttonStyle myButton"><input type="button" name="plan" value="Button"></li>
+                <li class="buttonStyle myButton"><button class="button">Choose</button></li>
             </ul>
         </div><!--closes div 'plans'-->
+        <div class="clear"></div>
         <div class="clearfix"></div>
         <div id="summary">
             <div class="fl">
@@ -57,8 +58,8 @@
             </div><!--closes 'fl' div-->
             <div class="fr">
                 <h3>PAY MONTHLY OR ANNUALLY</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderir in vouptate velit esse.</p><br>
-                <h3>CANCEL YOUR PLAN ANYTIME</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderir in vouptate velit esse.</p>
+                <h3 class="margCan">CANCEL YOUR PLAN ANYTIME</h3>
                 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fagiat nulla pariatur. Exceptuer sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt molit anim id eset laborum.</p>
             </div><!--closes 'fr' div-->
         </div><!--closes div 'summary'-->
